@startuml
skinparam linetype polyline
skinparam linetype ortho

title SkillsFuture Credit Pay Page Class Dependencies

package "5_SkillsFuture Credit Pay" as page {

}

package core {
    package constants {
        enum "<<enumeration>>\nCancelClaimsCode" {
            NO_CREDIT_CLAIM
            RESUBMIT_CLAIM
            COURSE_CANCELLED
            COURSE_POSTPONED
            NOT_ENROLLED
        }

        enum "<<enumeration>>\nPermittedFileUploadType" {
            PDF
            DOC
            DOCX
            TIF
            JPG
            JPEG
            PNG
            XLS
            XLSM
            XLSX
        }
    }

    package credit {
        class CancelClaims {

        }

        class DecryptPayload {

        }

        class EncryptPayload {

        }

        class UploadDocument {

        }

        class ViewClaims {

        }

        CancelClaims -down[hidden]|> DecryptPayload
        ViewClaims -down[hidden]-|> DecryptPayload
        ViewClaims -down[hidden]-|> CancelClaims
    }

    package models {
        package credit {
            class EncryptPayloadInfo {

            }

            class DecryptPayloadInfo {

            }

            class DocumentInfo {

            }

            class UploadDocumentInfo {

            }

            class CancelClaimsInfo {

            }
        }

    }

    package system {
        class Logger {
            + LOG_DIR {static}
            + LOG_FILE {static}
            + STREAM_HANDLER {static}
            + FILE_HANDLER {static}
            + FORMATTER {static}
            + __init__(str) {static}
            + debug(str)
            + info(str)
            + warning(str)
            + error(str)
        }
    }
}

package utils {
    package http_utils {
        class "Static Context" as husc {
            + handle_request(AbstractRequest, bool): None {static}
            + handle_response(Callable[[], requests.Response], bool]: None {static}
        }
    }

    package streamlit_utils {
        class "Static Context" as susc {
            + init(): None {static}
            + display_config(): None {static}
            + http_code_handler(Union[int, str]): None {static}}
            + validation_error_handler(list[str], list[str]): bool {static}
            + does_not_have_keys(): bool {static}
        }
    }

    package verify {
        class Validators {
            + _NRIC_PRODUCT {static}
            + _S_T_CHECKDIGIT {static}
            + _G_F_CHECKDIGIT {static}
            + _M_CHECKDIGIT {static}

            + verify_uen(str): bool {static}
            + verify_aes_encryption_key(str): bool {static}
            + verify_cert_private_key(str, str): bool {static}
            + verify_nric(str): bool {static}
        }
    }

    verify --up[hidden]-> http_utils
}

utils ..up[hidden]..> core

page ..> core.credit
page ..> core.models
page ..> Logger
page ..> husc
page ..> susc
page ..> verify
page ..> constants
@enduml